# cmake_project_template

./: CMakeLists.txt
tests/: CMakeLists.txt  test_foo.cpp
